[package]
name = "handybars"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["0x00002a"]
readme = "README.md"
description = "Minimal template parsing and expansion"

[workspace]
members = [ "." , "attribute" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "1.0.0"
