[package]
name = "handybars"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["0x00002a"]
readme = "README.md"
description = "Minimal template parsing and expansion"

[features]
macros = [ "dep:handybars_macros" ]

[package.metadata."docs.rs"]
all-features = true

[workspace]
members = [ "." , "macros" ]

[dependencies]
handybars_macros = { path = "macros", optional = true }

[dev-dependencies]
proptest = "1.0.0"
